# lm-gateway-rs

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  config.example.toml  test-classifier.ps1  test-profiles.ps1
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/instructions/: phased-commit.instructions.md  powershell.instructions.md
docs/: configuration.md  ha-classify-routing-study.md  quality-audit-2026-03-08.md  setup.md
etc/lm-gateway/: config.toml  lm-gateway.service
etc/lm-gateway/profiles/: agent-escalate.toml  agent.toml  claw-agent.toml  default.toml  general.toml  ha-auto.toml  ha-auto_fast.toml
src/: config.rs  router.rs  traffic.rs
src/api/: admin.rs  client.rs  client_auth.rs  status.rs
src/api/client/: mod.rs  ollama.rs  openai.rs
src/backends/: mod.rs  ollama.rs
src/config/: gateway.rs  mod.rs  profile.rs
src/router/: classify.rs  mod.rs  modes.rs  priority.rs  tests.rs
test-fixtures/security/: README.md  clean.rs  environment_backdoor.rs  hardcoded_secret.rs  obfuscated_payload.rs  prompt_injection_backdoor.toml  supply_chain_cargo.toml  zero_width_injection.rs
tools/: .env.example.ps1  Get-BranchReview.ps1  Invoke-LxcCargoTest.ps1  Push-ToLxc.ps1  Sync-LmGateway.ps1  Test-GatewayE2E.ps1  test-ha-prompts.ps1
tools/temp/0303/: Invoke-ClassifyAB.ps1  Invoke-ClassifySmoke.ps1  Invoke-HaIntegrationTest.ps1  Invoke-TierMinimum.ps1  smoke-results-v6.txt  smoke-results-v7.txt
